Add devise and create user authentication.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,3 +30,7 @@ Layout/EndOfLine:
 Style/StringLiterals:
   EnforcedStyle: single_quotes
 
+Metrics/MethodLength:
+  Exclude:
+    - 'db/migrate/*.*'
+
