--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,4 +33,8 @@ Style/StringLiterals:
 Metrics/MethodLength:
   Exclude:
     - 'db/migrate/*.*'
+    - 'app/helpers/application_helper.rb'
 
+RSpec/ExampleLength:
+  Exclude:
+    - 'spec/views/**/*.rb'
